--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
                 Please enable it to continue.</strong>
     </noscript>
     <div>Привет Мир</div>
+    <div id="app"></div>
 </body>
 
 </html>
